[package]
name = "salvo-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salvo = "0.64.1"
tokio = { version = "1", features = ["macros"] }

json = "0.12.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.75"
lazy_static = "1.4.0"
serde_yaml = "0.8.23"
schemars = "0.8.8"

tracing = "0.1"
tracing-subscriber = "0.3.15"

log = "0.4"
log4rs = "1.0"

rbs = { version = "4.3"}
rbatis = { version = "4.3"}
rbdc-mysql={version="4.3"}

jsonwebtoken = "8"

redis = "0.23.0"

futures = { version = "0.3", default-features = false }
thiserror = "1.0"

once_cell = "1.18.0"
